<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/default_small_margin"
    app:cardCornerRadius="@dimen/default_card_corner_Radius"
    app:cardElevation="@dimen/default_card_elevation"
    app:cardBackgroundColor="@color/background_white_alice_blue">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/default_small_paddings"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/score_LBL_place"
            android:layout_width="@dimen/list_number_size"
            android:layout_height="@dimen/list_number_size"
            android:background="@drawable/ic_launcher_background"
            android:backgroundTint="@color/button_background_color"
            android:gravity="center"
            android:text="@string/val_1"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:textSize="@dimen/list_number_text_size"
            android:layout_marginEnd="@dimen/list_number_margin"/>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:text="@string/score_list_text"
                android:textSize="@dimen/line_text_size"
                android:textColor="@color/charcoal_black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/score_LBL_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_1500"
                android:textSize="@dimen/line_score_size"
                android:textStyle="bold"
                android:textColor="@color/charcoal_black" />
        </LinearLayout>
    </LinearLayout>
</com.google.android.material.card.MaterialCardView>