<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_white_ghost"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/main_hearts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="@dimen/default_small_margin"
        android:layout_marginTop="@dimen/default_margin">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/main_IMG_heart0"
            android:layout_width="@dimen/heart_size"
            android:layout_height="@dimen/heart_size"
            app:srcCompat="@drawable/heart" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/main_IMG_heart1"
            android:layout_width="@dimen/heart_size"
            android:layout_height="@dimen/heart_size"
            android:layout_marginHorizontal="@dimen/default_heart_margin"
            app:srcCompat="@drawable/heart" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/main_IMG_heart2"
            android:layout_width="@dimen/heart_size"
            android:layout_height="@dimen/heart_size"
            app:srcCompat="@drawable/heart" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/main_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/default_margin"
        android:paddingBottom="@dimen/button_bottom_margin">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/main_BTN_left"
            android:layout_width="@dimen/button_size"
            android:layout_height="@dimen/button_size"
            android:insetTop="@dimen/none_size"
            android:insetBottom="@dimen/none_size"
            android:insetLeft="@dimen/none_size"
            android:insetRight="@dimen/none_size"
            app:cornerRadius="@dimen/button_radius"
            android:contentDescription="@string/main_BTN_left"
            app:icon="@drawable/go_left"
            app:iconGravity="textStart"
            app:iconPadding="@dimen/none_size"
            app:iconSize="@dimen/icon_size"
            app:iconTint="@color/white"
            app:backgroundTint="@color/button_background_color" />
        <View
            android:layout_width="@dimen/none_size"
            android:layout_height="@dimen/none_size"
            android:layout_weight="1" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/main_BTN_right"
            android:layout_width="@dimen/button_size"
            android:layout_height="@dimen/button_size"
            android:insetTop="@dimen/none_size"
            android:insetBottom="@dimen/none_size"
            android:insetLeft="@dimen/none_size"
            android:insetRight="@dimen/none_size"
            android:contentDescription="@string/main_BTN_right"
            app:cornerRadius="@dimen/button_radius"
            app:icon="@drawable/go_right"
            app:iconGravity="textStart"
            app:iconPadding="@dimen/none_size"
            app:iconSize="@dimen/icon_size"
            app:iconTint="@color/white"
            app:backgroundTint="@color/button_background_color" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/main_buttons"
        android:layout_below="@id/main_hearts"
        android:orientation="horizontal"
        android:baselineAligned="false"
        android:padding="10dp">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="@dimen/none_size"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/main_IMG_grim00"
                android:layout_width="match_parent"
                android:layout_height="@dimen/none_size"
                android:layout_weight="1"
                android:contentDescription="@string/grim_screen"
                android:src="@drawable/death_grim"
                android:visibility="invisible"
                tools:ignore="NestedWeights" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/main_IMG_grim01"
                android:layout_width="match_parent"
                android:layout_height="@dimen/none_size"
                android:layout_weight="1"
                android:contentDescription="@string/grim_screen"
                android:src="@drawable/death_grim"
                android:visibility="invisible"/>

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/main_IMG_grim02"
                android:layout_width="match_parent"
                android:layout_height="@dimen/none_size"
                android:layout_weight="1"
                android:contentDescription="@string/grim_screen"
                android:src="@drawable/death_grim"
                android:visibility="invisible"/>

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/main_IMG_grim03"
                android:layout_width="match_parent"
                android:layout_height="@dimen/none_size"
                android:layout_weight="1"
                android:contentDescription="@string/grim_screen"
                android:src="@drawable/death_grim"
                android:visibility="invisible"/>

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/main_IMG_grim04"
                android:layout_width="match_parent"
                android:layout_height="@dimen/none_size"
                android:layout_weight="1"
                android:contentDescription="@string/grim_screen"
                android:src="@drawable/death_grim"
                android:visibility="invisible"/>

              <androidx.appcompat.widget.AppCompatImageView
                  android:id="@+id/main_IMG_dog0"
                  android:layout_width="@dimen/dog_size"
                  android:layout_height="@dimen/none_size"
                  android:layout_weight="1"
                  android:contentDescription="@string/dog_screen"
                  android:src="@drawable/dog"
                  android:visibility="invisible"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="@dimen/none_size"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/main_IMG_grim10"
                android:layout_width="match_parent"
                android:layout_height="@dimen/none_size"
                android:layout_weight="1"
                android:contentDescription="@string/grim_screen"
                android:src="@drawable/death_grim"
                android:visibility="invisible"
                app:roundPercent="1"
                tools:ignore="NestedWeights" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/main_IMG_grim11"
                android:layout_width="match_parent"
                android:layout_height="@dimen/none_size"
                android:layout_weight="1"
                android:contentDescription="@string/grim_screen"
                android:src="@drawable/death_grim"
                android:visibility="invisible"
                app:roundPercent="1"/>

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/main_IMG_grim12"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:contentDescription="@string/grim_screen"
                android:src="@drawable/death_grim"
                android:visibility="invisible"
                app:roundPercent="1"/>

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/main_IMG_grim13"
                android:layout_width="match_parent"
                android:layout_height="@dimen/none_size"
                android:layout_weight="1"
                android:contentDescription="@string/grim_screen"
                android:src="@drawable/death_grim"
                android:visibility="visible"
                app:roundPercent="1"/>

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/main_IMG_grim14"
                android:layout_width="match_parent"
                android:layout_height="@dimen/none_size"
                android:layout_weight="1"
                android:contentDescription="@string/grim_screen"
                android:src="@drawable/death_grim"
                android:visibility="invisible"
                app:roundPercent="1"/>

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/main_IMG_dog1"
                android:layout_width="@dimen/dog_size"
                android:layout_height="@dimen/none_size"
                android:layout_weight="1"
                android:contentDescription="@string/dog_screen"
                android:src="@drawable/dog"
                android:visibility="visible"
                app:roundPercent="1"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="@dimen/none_size"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/main_IMG_grim20"
                android:layout_width="match_parent"
                android:layout_height="@dimen/none_size"
                android:layout_weight="1"
                android:contentDescription="@string/grim_screen"
                android:src="@drawable/death_grim"
                tools:ignore="NestedWeights"
                android:visibility="invisible"
                app:roundPercent="1"/>

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/main_IMG_grim21"
                android:layout_width="match_parent"
                android:layout_height="@dimen/none_size"
                android:layout_weight="1"
                android:contentDescription="@string/grim_screen"
                android:src="@drawable/death_grim"
                android:visibility="invisible"
                app:roundPercent="1"/>

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/main_IMG_grim22"
                android:layout_width="match_parent"
                android:layout_height="@dimen/none_size"
                android:layout_weight="1"
                android:contentDescription="@string/grim_screen"
                android:src="@drawable/death_grim"
                android:visibility="invisible"
                app:roundPercent="1"/>

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/main_IMG_grim23"
                android:layout_width="match_parent"
                android:layout_height="@dimen/none_size"
                android:layout_weight="1"
                android:contentDescription="@string/grim_screen"
                android:src="@drawable/death_grim"
                android:visibility="invisible"
                app:roundPercent="1"/>

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/main_IMG_grim24"
                android:layout_width="match_parent"
                android:layout_height="@dimen/none_size"
                android:layout_weight="1"
                android:contentDescription="@string/grim_screen"
                android:src="@drawable/death_grim"
                android:visibility="invisible"
                app:roundPercent="1"/>

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/main_IMG_dog2"
                android:layout_width="@dimen/dog_size"
                android:layout_height="@dimen/none_size"
                android:layout_weight="1"
                android:contentDescription="@string/dog_screen"
                android:src="@drawable/dog"
                android:visibility="invisible"
                app:roundPercent="1"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>

</RelativeLayout>